# pksha-hackathon-2025

./: .env.example  .gitignore  README.md  prompts.py  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pksha/: MainActivity.kt
backend/: app.py  main.py  message_app.py  prompts.py  pyproject.toml  quiz.py
backend/config/: .env.example
backend/docs/: agent_mcp_design.md  gcal_mcp_agent.md
backend/src/: calendar_agent.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/notification/: notification.dart
lib/notification/models/: notification_model.dart
lib/notification/services/: notification_service.dart
lib/veiw/home/: home_screen.dart
lib/veiw/questionnaire/: questionnaire_provider.dart  questionnaire_screen.dart
lib/veiw/training/: training_provider.dart  training_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
